Resources/Parsers/asm/asmZ80/asmZ80Parser.ts
// Generated from /Users/briancullinan/jupyter_ops/Resources/Parsers/asm/asmZ80/asmZ80.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { asmZ80Listener } from "./asmZ80Listener";

export class asmZ80Parser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly REGISTER = 10;
	public static readonly ASSEMBLER_DIRECTIVE = 11;
	public static readonly OPCODE = 12;
	public static readonly NAME = 13;
	public static readonly NUMBER = 14;
	public static readonly COMMENT = 15;
	public static readonly STRING = 16;
	public static readonly EOL = 17;
	public static readonly WS = 18;
	public static readonly RULE_prog = 0;
	public static readonly RULE_line = 1;
	public static readonly RULE_instruction = 2;
	public static readonly RULE_opcode = 3;
	public static readonly RULE_register_ = 4;
	public static readonly RULE_directive = 5;
	public static readonly RULE_assemblerdirective = 6;
	public static readonly RULE_lbl = 7;
	public static readonly RULE_expressionlist = 8;
	public static readonly RULE_label = 9;
	public static readonly RULE_expression = 10;
	public static readonly RULE_multiplyingExpression = 11;
	public static readonly RULE_argument = 12;
	public static readonly RULE_dollar = 13;
	public static readonly RULE_string = 14;
	public static readonly RULE_name = 15;
	public static readonly RULE_number = 16;
	public static readonly RULE_comment = 17;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "line", "instruction", "opcode", "register_", "directive", "assemblerdirective", 
		"lbl", "expressionlist", "label", "expression", "multiplyingExpression", 
		"argument", "dollar", "string", "name", "number", "comment",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "':'", "','", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'$'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "REGISTER", "ASSEMBLER_DIRECTIVE", "OPCODE", 
		"NAME", "NUMBER", "COMMENT", "STRING", "EOL", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(asmZ80Parser._LITERAL_NAMES, asmZ80Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return asmZ80Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "asmZ80.g4"; }

	// @Override
	public get ruleNames(): string[] { return asmZ80Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return asmZ80Parser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(asmZ80Parser._ATN, this);
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let _localctx: ProgContext = new ProgContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, asmZ80Parser.RULE_prog);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 40;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 37;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
				case 1:
					{
					this.state = 36;
					this.line();
					}
					break;
				}
				this.state = 39;
				this.match(asmZ80Parser.EOL);
				}
				}
				this.state = 42;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << asmZ80Parser.T__6) | (1 << asmZ80Parser.T__8) | (1 << asmZ80Parser.REGISTER) | (1 << asmZ80Parser.ASSEMBLER_DIRECTIVE) | (1 << asmZ80Parser.OPCODE) | (1 << asmZ80Parser.NAME) | (1 << asmZ80Parser.NUMBER) | (1 << asmZ80Parser.COMMENT) | (1 << asmZ80Parser.STRING) | (1 << asmZ80Parser.EOL))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public line(): LineContext {
		let _localctx: LineContext = new LineContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, asmZ80Parser.RULE_line);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 45;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				{
				this.state = 44;
				this.lbl();
				}
				break;
			}
			this.state = 49;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case asmZ80Parser.OPCODE:
				{
				this.state = 47;
				this.instruction();
				}
				break;
			case asmZ80Parser.T__6:
			case asmZ80Parser.T__8:
			case asmZ80Parser.REGISTER:
			case asmZ80Parser.ASSEMBLER_DIRECTIVE:
			case asmZ80Parser.NAME:
			case asmZ80Parser.NUMBER:
			case asmZ80Parser.STRING:
				{
				this.state = 48;
				this.directive();
				}
				break;
			case asmZ80Parser.COMMENT:
			case asmZ80Parser.EOL:
				break;
			default:
				break;
			}
			this.state = 52;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === asmZ80Parser.COMMENT) {
				{
				this.state = 51;
				this.comment();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instruction(): InstructionContext {
		let _localctx: InstructionContext = new InstructionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, asmZ80Parser.RULE_instruction);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 54;
			this.opcode();
			this.state = 56;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << asmZ80Parser.T__6) | (1 << asmZ80Parser.T__8) | (1 << asmZ80Parser.REGISTER) | (1 << asmZ80Parser.NAME) | (1 << asmZ80Parser.NUMBER) | (1 << asmZ80Parser.STRING))) !== 0)) {
				{
				this.state = 55;
				this.expressionlist();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public opcode(): OpcodeContext {
		let _localctx: OpcodeContext = new OpcodeContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, asmZ80Parser.RULE_opcode);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 58;
			this.match(asmZ80Parser.OPCODE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public register_(): Register_Context {
		let _localctx: Register_Context = new Register_Context(this._ctx, this.state);
		this.enterRule(_localctx, 8, asmZ80Parser.RULE_register_);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 60;
			this.match(asmZ80Parser.REGISTER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public directive(): DirectiveContext {
		let _localctx: DirectiveContext = new DirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, asmZ80Parser.RULE_directive);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << asmZ80Parser.T__6) | (1 << asmZ80Parser.T__8) | (1 << asmZ80Parser.REGISTER) | (1 << asmZ80Parser.NAME) | (1 << asmZ80Parser.NUMBER) | (1 << asmZ80Parser.STRING))) !== 0)) {
				{
				this.state = 62;
				this.argument();
				}
			}

			this.state = 65;
			this.assemblerdirective();
			this.state = 66;
			this.expressionlist();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assemblerdirective(): AssemblerdirectiveContext {
		let _localctx: AssemblerdirectiveContext = new AssemblerdirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, asmZ80Parser.RULE_assemblerdirective);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 68;
			this.match(asmZ80Parser.ASSEMBLER_DIRECTIVE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lbl(): LblContext {
		let _localctx: LblContext = new LblContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, asmZ80Parser.RULE_lbl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 70;
			this.label();
			this.state = 72;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === asmZ80Parser.T__0) {
				{
				this.state = 71;
				this.match(asmZ80Parser.T__0);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expressionlist(): ExpressionlistContext {
		let _localctx: ExpressionlistContext = new ExpressionlistContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, asmZ80Parser.RULE_expressionlist);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 74;
			this.expression();
			this.state = 79;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === asmZ80Parser.T__1) {
				{
				{
				this.state = 75;
				this.match(asmZ80Parser.T__1);
				this.state = 76;
				this.expression();
				}
				}
				this.state = 81;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let _localctx: LabelContext = new LabelContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, asmZ80Parser.RULE_label);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 82;
			this.name();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, asmZ80Parser.RULE_expression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 84;
			this.multiplyingExpression();
			this.state = 89;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === asmZ80Parser.T__2 || _la === asmZ80Parser.T__3) {
				{
				{
				this.state = 85;
				_la = this._input.LA(1);
				if (!(_la === asmZ80Parser.T__2 || _la === asmZ80Parser.T__3)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 86;
				this.multiplyingExpression();
				}
				}
				this.state = 91;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public multiplyingExpression(): MultiplyingExpressionContext {
		let _localctx: MultiplyingExpressionContext = new MultiplyingExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, asmZ80Parser.RULE_multiplyingExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			this.argument();
			this.state = 97;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === asmZ80Parser.T__4 || _la === asmZ80Parser.T__5) {
				{
				{
				this.state = 93;
				_la = this._input.LA(1);
				if (!(_la === asmZ80Parser.T__4 || _la === asmZ80Parser.T__5)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 94;
				this.argument();
				}
				}
				this.state = 99;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public argument(): ArgumentContext {
		let _localctx: ArgumentContext = new ArgumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, asmZ80Parser.RULE_argument);
		try {
			this.state = 109;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case asmZ80Parser.NUMBER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 100;
				this.number();
				}
				break;
			case asmZ80Parser.REGISTER:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 101;
				this.register_();
				}
				break;
			case asmZ80Parser.T__8:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 102;
				this.dollar();
				}
				break;
			case asmZ80Parser.NAME:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 103;
				this.name();
				}
				break;
			case asmZ80Parser.STRING:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 104;
				this.string();
				}
				break;
			case asmZ80Parser.T__6:
				this.enterOuterAlt(_localctx, 6);
				{
				{
				this.state = 105;
				this.match(asmZ80Parser.T__6);
				this.state = 106;
				this.expression();
				this.state = 107;
				this.match(asmZ80Parser.T__7);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dollar(): DollarContext {
		let _localctx: DollarContext = new DollarContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, asmZ80Parser.RULE_dollar);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this.match(asmZ80Parser.T__8);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public string(): StringContext {
		let _localctx: StringContext = new StringContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, asmZ80Parser.RULE_string);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.match(asmZ80Parser.STRING);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public name(): NameContext {
		let _localctx: NameContext = new NameContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, asmZ80Parser.RULE_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this.match(asmZ80Parser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public number(): NumberContext {
		let _localctx: NumberContext = new NumberContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, asmZ80Parser.RULE_number);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(asmZ80Parser.NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public comment(): CommentContext {
		let _localctx: CommentContext = new CommentContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, asmZ80Parser.RULE_comment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this.match(asmZ80Parser.COMMENT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!asmZ80Parser.__ATN) {
			asmZ80Parser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(asmZ80Parser._serializedATN));
		}

		return asmZ80Parser.__ATN;
	}

}

export class ProgContext extends ParserRuleContext {
	public EOL(): TerminalNode[];
	public EOL(i: number): TerminalNode;
	public EOL(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(asmZ80Parser.EOL);
		} else {
			return this.getToken(asmZ80Parser.EOL, i);
		}
	}
	public line(): LineContext[];
	public line(i: number): LineContext;
	public line(i?: number): LineContext | LineContext[] {
		if (i === undefined) {
			return this.getRuleContexts(LineContext);
		} else {
			return this.getRuleContext(i, LineContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return asmZ80Parser.RULE_prog; }
	// @Override
	public enterRule(listener: asmZ80Listener): void {
		if (listener.enterProg) {
			listener.enterProg(this);
		}
	}
	// @Override
	public exitRule(listener: asmZ80Listener): void {
		if (listener.exitProg) {
			listener.exitProg(this);
		}
	}
}


export class LineContext extends ParserRuleContext {
	public lbl(): LblContext | undefined {
		return this.tryGetRuleContext(0, LblContext);
	}
	public instruction(): InstructionContext | undefined {
		return this.tryGetRuleContext(0, InstructionContext);
	}
	public directive(): DirectiveContext | undefined {
		return this.tryGetRuleContext(0, DirectiveContext);
	}
	public comment(): CommentContext | undefined {
		return this.tryGetRuleContext(0, CommentContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return asmZ80Parser.RULE_line; }
	// @Override
	public enterRule(listener: asmZ80Listener): void {
		if (listener.enterLine) {
			listener.enterLine(this);
		}
	}
	// @Override
	public exitRule(listener: asmZ80Listener): void {
		if (listener.exitLine) {
			listener.exitLine(this);
		}
	}
}


export class InstructionContext extends ParserRuleContext {
	public opcode(): OpcodeContext {
		return this.getRuleContext(0, OpcodeContext);
	}
	public expressionlist(): ExpressionlistContext | undefined {
		return this.tryGetRuleContext(0, ExpressionlistContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return asmZ80Parser.RULE_instruction; }
	// @Override
	public enterRule(listener: asmZ80Listener): void {
		if (listener.enterInstruction) {
			listener.enterInstruction(this);
		}
	}
	// @Override
	public exitRule(listener: asmZ80Listener): void {
		if (listener.exitInstruction) {
			listener.exitInstruction(this);
		}
	}
}


export class OpcodeContext extends ParserRuleContext {
	public OPCODE(): TerminalNode { return this.getToken(asmZ80Parser.OPCODE, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return asmZ80Parser.RULE_opcode; }
	// @Override
	public enterRule(listener: asmZ80Listener): void {
		if (listener.enterOpcode) {
			listener.enterOpcode(this);
		}
	}
	// @Override
	public exitRule(listener: asmZ80Listener): void {
		if (listener.exitOpcode) {
			listener.exitOpcode(this);
		}
	}
}


export class Register_Context extends ParserRuleContext {
	public REGISTER(): TerminalNode { return this.getToken(asmZ80Parser.REGISTER, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return asmZ80Parser.RULE_register_; }
	// @Override
	public enterRule(listener: asmZ80Listener): void {
		if (listener.enterRegister_) {
			listener.enterRegister_(this);
		}
	}
	// @Override
	public exitRule(listener: asmZ80Listener): void {
		if (listener.exitRegister_) {
			listener.exitRegister_(this);
		}
	}
}


export class DirectiveContext extends ParserRuleContext {
	public assemblerdirective(): AssemblerdirectiveContext {
		return this.getRuleContext(0, AssemblerdirectiveContext);
	}
	public expressionlist(): ExpressionlistContext {
		return this.getRuleContext(0, ExpressionlistContext);
	}
	public argument(): ArgumentContext | undefined {
		return this.tryGetRuleContext(0, ArgumentContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return asmZ80Parser.RULE_directive; }
	// @Override
	public enterRule(listener: asmZ80Listener): void {
		if (listener.enterDirective) {
			listener.enterDirective(this);
		}
	}
	// @Override
	public exitRule(listener: asmZ80Listener): void {
		if (listener.exitDirective) {
			listener.exitDirective(this);
		}
	}
}


export class AssemblerdirectiveContext extends ParserRuleContext {
	public ASSEMBLER_DIRECTIVE(): TerminalNode { return this.getToken(asmZ80Parser.ASSEMBLER_DIRECTIVE, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return asmZ80Parser.RULE_assemblerdirective; }
	// @Override
	public enterRule(listener: asmZ80Listener): void {
		if (listener.enterAssemblerdirective) {
			listener.enterAssemblerdirective(this);
		}
	}
	// @Override
	public exitRule(listener: asmZ80Listener): void {
		if (listener.exitAssemblerdirective) {
			listener.exitAssemblerdirective(this);
		}
	}
}


export class LblContext extends ParserRuleContext {
	public label(): LabelContext {
		return this.getRuleContext(0, LabelContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return asmZ80Parser.RULE_lbl; }
	// @Override
	public enterRule(listener: asmZ80Listener): void {
		if (listener.enterLbl) {
			listener.enterLbl(this);
		}
	}
	// @Override
	public exitRule(listener: asmZ80Listener): void {
		if (listener.exitLbl) {
			listener.exitLbl(this);
		}
	}
}

